# fastapi-todos

./: .gitignore  README.md  docker-compose.yml
nginx/: nginx.conf
todos/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  supervisor.conf
todos/app/: __init__.py  dependencies.py  helpers.py  initializers.py  schemas.py  settings.py
todos/app/accounts/: __init__.py  models.py  schemas.py  views.py
todos/app/main/: __init__.py  views.py
todos/app/todos/: __init__.py  models.py  schemas.py  views.py
todos/migrations/models/: 0_20210428172609_init.sql
todos/tests/: conftest.py  test_accounts.py  test_main.py  test_todos.py  utils.py
